// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink should render 1`] = `
<body>
  <div>
    <span
      class="cursor-pointer dark:hover:text-neutral-200 hover:text-neutral-900 dark:text-neutral-500 text-neutral-400"
    >
      Label
    </span>
  </div>
</body>
`;

exports[`NavLink should render with active link 1`] = `
<body>
  <div>
    <span
      class="cursor-pointer dark:hover:text-neutral-200 hover:text-neutral-900 dark:text-neutral-200 text-neutral-900"
    >
      Label
    </span>
  </div>
</body>
`;
